--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
-    <string name="app_name">Motor Vitals</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="app_name">motorvitals</string>
+    <string name="Motorcycle">Motorcycle</string>
+    <string name="Status">Status</string>
+    <string name="Profile">Profile</string>
 </resources>
