add button for new Motorcycle and fixed view for recycler in recycler

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,7 @@
     <!--  Hint to input  -->
     <string name="detail_title">Your model name</string>
     <string name="detail_description">Your description</string>
+    <string name="detail_list">Your list name</string>
 
     <!--  Autofill hint  -->
     <string name="detail_title_fill">Generic model</string>
