storage working on

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,7 @@
     <!--  Motorcycle Detail Fragment  -->
     <string name="detail_title">Title</string>
     <string name="detail_description">Description</string>
+    <string name="detail_km">Current Km</string>
     <string name="detail_add_list">Add new list</string>
     <string name="detail_add_element">Add</string>
 
